# leet_code

58_length_last_word/: CMakeLists.txt  CMakePresets.json  Makefile
58_length_last_word/app/: CMakeLists.txt  main.c
58_length_last_word/my_lib/inc/: helper.h
58_length_last_word/my_lib/src/: CMakeLists.txt  helper.c
58_length_last_word/test/inc/: test_lib.h
58_length_last_word/test/src/: CMakeLists.txt  test_lib.c
66_plus_one/: main.c
67_add_binary/: CMakeLists.txt  main.c
